# fast-mahjong

./: .gitignore  Cargo.toml  LICENSE  README.md  a.out  cacher.cpp  datalize.py  pyproject.toml  rule_base.py  test.cpp
.old/: test.cpp
.old/cacher/: hele_cacher.cpp
src/: main.rs  types.rs
